fix(OffCanvasWrap): apply overflow only when is open

--- a/src/styles/_components.off-canvas-wrap.scss
+++ b/src/styles/_components.off-canvas-wrap.scss
@@ -1,6 +1,5 @@
 @include component('off-canvas-wrap') {
   display: block;
-  overflow: hidden;
   width: 100%;
 
   @include element('content') {
